assets/scss/base/_base.scss
//
//
// Created by PhpStorm.
// User: pascal
// Date: 2019-07-16
// Time: 17:05
//

// Nord css variables
@each $name, $color in $nords {
  :root {
    --color-#{$name}: #{red($color)} #{green($color)} #{blue($color)};
  }
}

// Named colors
:root {
  --color-primary: #{red($nord-10) green($nord-10) blue($nord-10)};
  --color-secondary: #{red($nord-11) green($nord-11) blue($nord-11)};

  &[class="dark"] {
    --color-primary: #{red($nord-8) green($nord-8) blue($nord-8)};
    --color-secondary: #{red($nord-11) green($nord-11) blue($nord-11)};
  }
}

body {
  @apply relative font-rubik-regular text-base text-polarnight-nord-3 dark:text-snowstorm-nord-4 bg-body-background dark:bg-body-backgrounddark;
}

// Liens
a,
button {
  @apply text-[inherit] underline;

  text-decoration-color: theme("colors.current");
  text-decoration-thickness: from-font;
  text-underline-offset: 1px;
  text-decoration-style: solid;
  transition: color 0.4s;

  &:hover {
    @apply text-primary;
    text-decoration-color: theme("colors.current");
  }

  &:focus {
    @apply outline-1 outline-offset-2 outline-dotted outline-current;
  }
}

